All_Component_DX/force-app/main/default/objects/SM_Product_Attributes__c/SM_Product_Attributes__c.object-meta.xml
<CustomObject>
    <description>Object to manage templates and installed product reference</description>
    <label>Product Attributes</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Product Attributes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>