All_Component_DX/force-app/main/default/objects/SM_Product_Attributes__c/fields/SM_Attribute_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Attribute_Template_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Attributes_Template.id</description>
    <label>Attribute Template Id</label>
    <referenceTo>SM_Attributes_Template__c</referenceTo>
    <relationshipLabel>Product Attributes</relationshipLabel>
    <relationshipName>Product_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>