All_Component_DX/force-app/main/default/objects/SM_Product_Attributes__c/fields/SM_Product__c.field-meta.xml
<CustomField>
    <fullName>SM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Product2 Product Name</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Attributes</relationshipLabel>
    <relationshipName>Product_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>