All_Component_DX/force-app/main/default/objects/SM_Product_Attributes__c/fields/SM_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>SM_Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>